Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20442

Wrong alphanumerical sorting when accents on Upper case (É) in Extension dialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • Shell
    • None

    Description

      reactos-bootcd-0.4.16-dev-2154-g323a406-x86-gcc-lin-dbg

      • Open Extension dialog
      •  Wrong alphanumerical sorting when accents on Upper case
      • Related to CORE-20434

       Guilty code is the use of wcsicmp in FileTypesDlg_CompareItems here https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/shell32/dialogs/filetypes.cpp;hb=3885311c85dd715210e95b03f6169b62ff992184#l1657

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: