[SHELL32] FileTypesDlg: Use StrCmpIW instead of wcsicmp (#8604)

wcsicmp depends on CRT locale status. We have to respect
thread locale.
JIRA issue: CORE-20442
- Use shlwapi!StrCmpIW instead of wcsicmp in
  FileTypesDlg_CompareItems function.